<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    android:padding="12sp"
    tools:context=".HomeActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="20sp"
        android:layout_gravity="center"
        android:textSize="45sp"
        android:text="@string/change_password"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:layout_weight="1"/>
        <EditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48sp"
            android:hint="@string/current_password"/>
    <EditText
        android:id="@+id/new_password_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48sp"
        android:hint="@string/new_password"/>
    <EditText
        android:id="@+id/new_password_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48sp"
        android:hint="@string/confirm_password"/>
        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/save_password"
            />
</LinearLayout>