<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".QtyModifier">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:weightSum="12"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_qty"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:layout_marginBottom="25sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model_no"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lot_number"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shift"
                    android:textSize="25sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/model_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/value"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/lotno_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/value"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/shift_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/value"
                    android:textSize="25sp"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginTop="35sp"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judgement"/>
        <TextView
            android:id="@+id/status_qty"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/value"
            android:textSize="45sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/checker_qty"
            android:gravity="center"
            android:text="@string/value"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_marginBottom="25sp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/packing_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/packing"
            android:minHeight="50sp"
            android:paddingVertical="15sp"
            android:inputType="number" />
        <EditText
            android:id="@+id/total_box_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/total_box"
            android:minHeight="50sp"
            android:paddingVertical="15sp"
            android:inputType="number" />
        <EditText
            android:id="@+id/lotsize_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lot_size"
            android:minHeight="50sp"
            android:paddingVertical="15sp"
            android:inputType="number" />
        <Button
            android:id="@+id/btn_process"
            android:layout_marginVertical="15sp"
            android:paddingVertical="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:minHeight="50sp"
            android:text="@string/transfers_process" />
    </LinearLayout>
</ScrollView>