<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".ShowInspection">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="15sp"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inspection_card"
            android:textSize="35sp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="35sp"
            android:textSize="25sp"
            android:text="@string/dummy"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pcs_per_box" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:text="@string/dummy" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_box" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:text="@string/dummy" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/status_inspection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/status"
                android:layout_marginVertical="25sp"
                android:textSize="45sp"/>
        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20sp">
            <TableRow
                android:layout_width="match_parent"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/inspection_date"
                    android:layout_weight="1"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/date_inspection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dummy"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lot_size"
                    android:layout_weight="1"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/lotsize_inspection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dummy"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lot_number"
                    android:layout_weight="1"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/lotnumber_inspection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dummy"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/shift"
                    android:layout_weight="1"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/shift_inspection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dummy"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/section"
                    android:layout_weight="1"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/section_inspection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dummy"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/line"
                    android:layout_weight="1"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/line_inspection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dummy"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/remark"
                    android:layout_weight="1"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/remark_inspection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dummy"
                    android:textSize="18sp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_marginTop="15sp"
                android:weightSum="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/chekerby"
                    android:layout_weight="1"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/checker_inspection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dummy"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15sp"
            android:layout_marginHorizontal="15sp"
            android:text="@string/print"/>

    </LinearLayout>
</LinearLayout>