<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LotCardShow">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:weightSum="12"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfers_process"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:layout_marginBottom="25sp"
            />
        <TableLayout
            android:id="@+id/data_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:weightSum="2">
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/model_no"
                    android:layout_weight="1"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/reference_right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:text="@string/qty"
                    android:textSize="25sp"/>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/transfers_action"
            android:layout_marginVertical="15sp"
            android:paddingVertical="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:minHeight="50sp"
            android:text="@string/process" />
    </LinearLayout>
</ScrollView>